Cleare databases and remove subdomains. create projects table with corresponding controller and views. Create artifacts table with assosiations to projects. Remove employee table. Move plan descriptions to the separate table and create assosiations with plans table.

--- a/test/fixtures/artifacts.yml
+++ b/test/fixtures/artifacts.yml
@@ -2,10 +2,10 @@
 
 one:
   name: MyString
-  email: MyString
-  organization: one
+  file: MyString
+  project: one
 
 two:
   name: MyString
-  email: MyString
-  organization: two
+  file: MyString
+  project: two
