--- a/test/fixtures/organizations.yml
+++ b/test/fixtures/organizations.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  subdomain: MyString
+  name: MyString1
+  subdomain: MyString1
+  plan_id: 1
 
 two:
-  name: MyString
-  subdomain: MyString
+  name: MyString2
+  subdomain: MyString2
+  plan_id: 2
